--- a/web/css/index.css
+++ b/web/css/index.css
@@ -6,6 +6,26 @@ div,table,section{
     box-sizing:border-box;
 }
 
+button{
+    width: 52px;
+    height: 44px;
+    font-size: 16px;
+    border-radius: 8px;
+    background-color: #f2f5f6; 
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#f2f5f6), to(#c8d7dc));
+    background-image: -webkit-linear-gradient(top, #f2f5f6, #c8d7dc);
+}
+
+input{
+    height: 30px;
+    font-size: 20px;
+
+}
+
+input[ type=checkbox ] {
+  -webkit-transform: scale( 2 , 2 );
+}
+
 #application{
     width: 360px;
     margin: 10px auto;
@@ -57,7 +77,7 @@ div,table,section{
 	width:120px;
 }
 .menu-table td:nth-child(3) input{
-	width:36px;
+	width:44px;
 	text-align: right;
 }
 .menu-table td:nth-child(3){
@@ -67,10 +87,13 @@ div,table,section{
     border-bottom:none;
 }
 
+
+
 /* div#div 合計表示 */
 #sum-price-pane{
     width:240px;
     margin:16px auto;
     padding:0 4px;
     text-align:right;
+    font-size:22px;
 }
