--- a/web/css/index.css
+++ b/web/css/index.css
@@ -13,6 +13,17 @@ div,table,section{
     box-sizing:border-box;
 }
 
+header{
+    padding: 24px;
+    margin: 0 0 12px 0;
+    color: white;
+    border-radius: 4px;
+    font-size: 20px;
+    background-color: rgba( 0, 0, 0, 0.7);
+    text-shadow: 0 2px 2px rgb(0,0,0);
+    box-shadow: 0 2px 2px rgba( 0, 0, 0, 0.6);
+}
+
 button{
     width: 52px;
     height: 44px;
@@ -34,7 +45,7 @@ input[ type=checkbox ] {
 }
 
 #application{
-    width: 360px;
+    width: 400px;
     margin: 10px auto;
     padding: 10px;
     box-shadow:0 2px 4px rgba( 0, 0, 0, 0.6);
@@ -49,7 +60,7 @@ input[ type=checkbox ] {
 
 /* table#menu-table メニュー表 */
 .menu-table{
-    width:340px;
+    width:380px;
     margin:0 auto;
     /* border:1px solid rgba(0,0,0,0.6); */
     border-spacing:0;
@@ -84,11 +95,11 @@ input[ type=checkbox ] {
 	width:120px;
 }
 .menu-table td:nth-child(3) input{
-	width:44px;
+	width:64px;
 	text-align: right;
 }
 .menu-table td:nth-child(3){
-	width:50px;
+	width:70px;
 }
 .menu-table tr:last-child td{
     border-bottom:none;
